# texture_projection

./: .gitignore  CMakeLists.txt  README.md  glad.c  main.cpp
Application/: Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Mesh.cpp  Model.cpp  Scene.cpp  Texture.cpp  Utils.cpp
Application/include/: Application.h  Camera.h  Mesh.h  Model.h  Scene.h  Texture.h  Utils.h
IMGUI/: CMakeLists.txt
LCNN/: cutline.py  demo.py
LCNN/config/: stairdata.yaml
LCNN/lcnn/: box.py
